# screen-record-app

./: LICENSE.md  README.md  pyproject.toml
screen_record_app/: main.py
screen_record_app/export/: video_enhancer.py  video_exporter.py
screen_record_app/recording/: area_selector.py  audio_recorder.py  screen_recorder.py  webcam_handler.py
screen_record_app/ui/: export_controls.py  main_window.py  preview_thread.py  recording_controls.py  timeline.py  webcam_controls.py
screen_record_app/utils/: image_processing.py  retry_operation.py
tests/: test_area_selector.py
